переход с диссертации на автореферат
изменил текст во введении

--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -2,27 +2,27 @@
 На сегодняшний день взаимодействие человека с компьютерными системами через управление речевыми командами является одним из самых удобных и перспективных форматов.
 
 % версия для автореферата
-%Первая попытка конструирования системы автоматического распознавания речи была сделана в 1952 году, а уже в 1970-е годы исследования в области распознавания речи достигли значительных успехов.
-%До настоящего времени распознавание речи совершенствовалось, а словарь распознаваемых слов вырос до нескольких десятков тысяч.
-%Применение быстрых методов декодирования позволило производить распознавание в реальном времени.
+Первая попытка конструирования системы автоматического распознавания речи была сделана в 1952 году, а уже в 1970-е годы исследования в области распознавания речи достигли значительных успехов.
+До настоящего времени распознавание речи совершенствовалось, а словарь распознаваемых слов вырос до нескольких десятков тысяч.
+Применение быстрых методов декодирования позволило производить распознавание в реальном времени.
 
 % версия для диссертации
-Первая попытка конструирования системы автоматического распознавания речи была сделана в 1952 году в Bell Laboratories, США~\cite{davis1952automatic}.
-Система с хорошим уровнем точности распознавала цифры от нуля до девяти, произнесённые диктором через телефонный автомат.
-Значительные улучшения качества в области распознавания речи были достигнуты в 70-ых годах.
-В то время технологии автоматического распознавания отдельных команд основывалась на работах Itakura в США~\cite{itakura1975minimum}, Sakoe и Chiba в Японии~\cite{sakoe1978dynamic} и Величкина и Загоруйка в СССР~\cite{velichko1970automatic}.
-Советские учёные производили улучшения методов распознавания с помощью эталона.
-Применение подхода динамического программирования было отличительной особенностью японского исследования.
-Работа Itakura раскрыла метод кодирования линейного предсказания (Linear Predictive Coding, LPC), который успешно использовался в распознавании сигналов с низким битрейтом (количество битов информации, передаваемых в секунду).
-В AT\&T Bell Laboratories были построены распознающие системы, обработка акустического сигнала в которых была основана на LPC анализе, а процесс распознавания проходил с использованием метода динамической трансформации времени (Dynamic Time Warping, DTW).
-В 1980-х годах от подходов, основанных на применении эталонов, научные работы в области распознавания речи перешли к моделированию статистическими методами.
-Использовались скрытые модели Маркова (Hidden Markov Models, HMM).
-Работы Бейкера~\cite{baker1990stochastic} были одними из первых, в которых для решения задачи распознавания речи были применены HMM.
-С 1990-х годов распознавание речи несколько усовершенствовалось.
-Словарь распознаваемых слов вырос до нескольких десятков тысяч.
-Использование быстрых методов декодирования позволило производить распознавание в реальном времени.
-В современных дикторозависимых системах, распознающих отдельные слова, количество которых достигает двадцати тысяч слов, ошибки составляют менее 0.1~\%~\cite{das1993influence}.
-И около 5~\% ошибок в независимых от диктора системах, которые распознают слитную речь из тысячи слов~\cite{aubert1993continuous}.
+%Первая попытка конструирования системы автоматического распознавания речи была сделана в 1952 году в Bell Laboratories, США~\cite{davis1952automatic}.
+%Система с хорошим уровнем точности распознавала цифры от нуля до девяти, произнесённые диктором через телефонный автомат.
+%Значительные улучшения качества в области распознавания речи были достигнуты в 70-ых годах.
+%В то время технологии автоматического распознавания отдельных команд основывалась на работах Itakura в США~\cite{itakura1975minimum}, Sakoe и Chiba в Японии~\cite{sakoe1978dynamic} и Величкина и Загоруйка в СССР~\cite{velichko1970automatic}.
+%Советские учёные производили улучшения методов распознавания с помощью эталона.
+%Применение подхода динамического программирования было отличительной особенностью японского исследования.
+%Работа Itakura раскрыла метод кодирования линейного предсказания (Linear Predictive Coding, LPC), который успешно использовался в распознавании сигналов с низким битрейтом (количество битов информации, передаваемых в секунду).
+%В AT\&T Bell Laboratories были построены распознающие системы, обработка акустического сигнала в которых была основана на LPC анализе, а процесс распознавания проходил с использованием метода динамической трансформации времени (Dynamic Time Warping, DTW).
+%В 1980-х годах от подходов, основанных на применении эталонов, научные работы в области распознавания речи перешли к моделированию статистическими методами.
+%Использовались скрытые модели Маркова (Hidden Markov Models, HMM).
+%Работы Бейкера~\cite{baker1990stochastic} были одними из первых, в которых для решения задачи распознавания речи были применены HMM.
+%С 1990-х годов распознавание речи несколько усовершенствовалось.
+%Словарь распознаваемых слов вырос до нескольких десятков тысяч.
+%Использование быстрых методов декодирования позволило производить распознавание в реальном времени.
+%В современных дикторозависимых системах, распознающих отдельные слова, количество которых достигает двадцати тысяч слов, ошибки составляют менее 0.1~\%~\cite{das1993influence}.
+%И около 5~\% ошибок в независимых от диктора системах, которые распознают слитную речь из тысячи слов~\cite{aubert1993continuous}.
 
 В современных системах применяются 3 основные группы методов распознавания речи.
 Первая группа --- это скрытые марковские модели.
@@ -45,9 +45,9 @@
 \end{itemize}
 
 % версия для автореферата
-%С учётом этих требований широко используемые скрытые марковские модели не подходят из-за низкого качества распознавания в условиях шума.
+С учётом этих требований широко используемые скрытые марковские модели не подходят из-за низкого качества распознавания в условиях шума.
 % версия для диссертации
-С учётом этих требований широко используемые скрытые марковские модели не подходят из-за низкого качества распознавания в условиях шума \cite{korsun2013experimental}.
+%С учётом этих требований широко используемые скрытые марковские модели не подходят из-за низкого качества распознавания в условиях шума \cite{korsun2013experimental}.
 
 Остальные две группы методов в настоящий момент не обеспечивают необходимой надёжности распознавания.
 По этой причине тема настоящей работы, направленной на совершенствование методов распознавания речевых команд с помощью сравнения с эталоном и с использованием нейронных сетей, является актуальной.
@@ -98,62 +98,62 @@
 \textbf{Достоверность результатов} обеспечивается корректным применением математической статистики, методов идентификации и анализа данных, подтверждением полученных теоретических результатов с помощью экспериментов, а также сравнением с известными результатами, ранее полученными другими авторами.
 
 % версия для автореферата
-%\textbf{Апробация работы.}
-%Основные результаты исследования докладывались на следующих конференциях:
-%\begin{enumerate}[label={\arabic*)}]
-%	\item Доклад <<Получение оптимального эталона с помощью метода главных компонент>> на Всероссийской научно-технической конференции <<XII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2015) \cite{poliyev2015pca}.
-%	\item Доклад <<Алгоритм разбиения слов на однородные части в интересах разработки речевого интерфейса бортового оборудования>> на Восьмом Международном Аэрокосмическом Конгрессе IAC'15 (Москва, 2015) \cite{poliyev2015split}.
-%	\item Доклад <<Разработка модифицированного алгоритма динамического программирования для разбиения слов на однородные части>> на Всероссийской научно-технической конференции <<XIII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2016) \cite{poliyev2016dynamic}.
-%	\item Доклад <<Определение оптимального разбиения слова на однородные участки на основе матрицы корреляционного портрета>> на Юбилейной Всероссийской научно-технической конференции <<Авиационные системы в XXI веке>> (Москва, 2016) \cite{poliyev2016split, poliyev2017split}.
-%	\item Доклад <<Разработка метода анализа фонетически однородных частей слов естественного языка>> на Второй Международной научно-практической конференции <<Эрго-2016: Человеческий фактор в сложных технических системах и средах>> (Санкт-Петербург, 2016) \cite{poliyev2016natural}.
-%	\item Доклад <<The algorithm of an optimal word pattern synthesis using principal component analysis>> на международном семинаре Workshop on Contemporary Materials and Technologies in the Aviation Industry --- CMTAI (Москва, 2016) \cite{poliyev2016pca}.
-%	\item Доклад <<Применение формулы Байеса для распознавания слов с использованием нескольких эталонов>> на Всероссийской научно-технической конференции <<Навигация, наведение и управление летательными аппаратами>> (Москва, 2017) \cite{poliyev2017bayes}.
-%	\item Доклад <<Разработка алгоритма распознавания слов в условиях шума на основе свёрточных нейронных сетей>> на Девятом Международном Аэрокосмическом Конгрессе IAC'18 (Москва, 2018) \cite{poliyev2018cnn}.
-%	\item Доклад <<Распознавание речевых команд на основе свёрточных нейронных сетей>> на Всероссийской научно-технической конференции <<Моделирование авиационных систем>> (Москва, 2018) \cite{poliyev2018cnn2}.
-%\end{enumerate}
-%
-%\textbf{Публикации.}
-%По теме диссертации автором опубликовано 4 научных работы \cite{korsun2016automatic,poliyev2017pca,korsun2018usage,korsun2018optimal}: 3 из них в изданиях из списка, рекомендованного ВАК РФ \cite{korsun2016automatic,poliyev2017pca,korsun2018usage}, и 2 из них в изданиях, входящих в базу Scopus и базу Web of Science \cite{korsun2016automatic,korsun2018optimal}.
-
-% версия для диссертации
 \textbf{Апробация работы.}
 Основные результаты исследования докладывались на следующих конференциях:
 \begin{enumerate}[label={\arabic*)}]
-	\item Доклад на Всероссийской научно-технической конференции <<XII Научные чтения по авиации посвящённые памяти Н.Е. Жуковского>> (Москва, 17 апреля 2015 года).
-	Тема доклада: <<Получение оптимального эталона с помощью метода главных компонент>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2015pca}.
-	\item Доклад на Восьмом Международном Аэрокосмическом Конгрессе IAC'15 (Москва, 28--31 августа 2015 года).
-	Тема доклада: <<Алгоритм разбиения слов на однородные части в интересах разработки речевого интерфейса бортового оборудования>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2015split}.
-	\item Доклад на Всероссийской научно-технической конференции <<XIII Научные чтения по авиации посвящённые памяти Н.Е. Жуковского>> (Москва, 14 апреля 2016 года).
-	Тема доклада: <<Разработка модифицированного алгоритма динамического программирования для разбиения слов на однородные части>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016dynamic}.
-	\item Доклад на Юбилейной Всероссийской научно-технической конференции <<Авиационные системы в XXI веке>> (Москва, 26 мая 2016 года).
-	Тема доклада: <<Определение оптимального разбиения слова на однородные участки на основе матрицы корреляционного портрета>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016split, poliyev2017split}.
-	\item Доклад на Второй Международной научно-практической конференции <<Эрго-2016: Человеческий фактор в сложных технических системах и средах>> (Санкт-Петербург, 6--9 июля 2016 года).
-	Тема доклада: <<Разработка метода анализа фонетически однородных частей слов естественного языка>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016natural}.
-	\item Доклад на международном семинаре Workshop on Contemporary Materials and Technologies in the Aviation Industry --- CMTAI (Москва, 15--16 декабря 2016 года).
-	Тема доклада: <<The algorithm of an optimal word pattern synthesis using principal component analysis>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016pca}.
-	\item Доклад на Всероссийской научно-технической конференции <<Навигация, наведение и управление летательными аппаратами>> (Москва, 21--22 сентября 2017 года).
-	Тема доклада: <<Применение формулы Байеса для распознавания слов с использованием нескольких эталонов>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2017bayes}.
-	\item Доклад на Девятом Международном Аэрокосмическом Конгрессе IAC'18 (Москва, 28--31 августа 2018 года).
-	Тема доклада: <<Разработка алгоритма распознавания слов в условиях шума на основе свёрточных нейронных сетей>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2018cnn}.
-	\item Доклад на Всероссийской научно-технической конференции <<Моделирование авиационных систем>> (Москва, 21--22 ноября 2018 года).
-	Тема доклада: <<Распознавание речевых команд на основе свёрточных нейронных сетей>>.
-	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2018cnn2}.
+	\item Доклад <<Получение оптимального эталона с помощью метода главных компонент>> на Всероссийской научно-технической конференции <<XII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2015) \cite{poliyev2015pca}.
+	\item Доклад <<Алгоритм разбиения слов на однородные части в интересах разработки речевого интерфейса бортового оборудования>> на Восьмом Международном Аэрокосмическом Конгрессе IAC'15 (Москва, 2015) \cite{poliyev2015split}.
+	\item Доклад <<Разработка модифицированного алгоритма динамического программирования для разбиения слов на однородные части>> на Всероссийской научно-технической конференции <<XIII Научные чтения по авиации, посвящённые памяти Н.Е. Жуковского>> (Москва, 2016) \cite{poliyev2016dynamic}.
+	\item Доклад <<Определение оптимального разбиения слова на однородные участки на основе матрицы корреляционного портрета>> на Юбилейной Всероссийской научно-технической конференции <<Авиационные системы в XXI веке>> (Москва, 2016) \cite{poliyev2016split, poliyev2017split}.
+	\item Доклад <<Разработка метода анализа фонетически однородных частей слов естественного языка>> на Второй Международной научно-практической конференции <<Эрго-2016: Человеческий фактор в сложных технических системах и средах>> (Санкт-Петербург, 2016) \cite{poliyev2016natural}.
+	\item Доклад <<The algorithm of an optimal word pattern synthesis using principal component analysis>> на международном семинаре Workshop on Contemporary Materials and Technologies in the Aviation Industry --- CMTAI (Москва, 2016) \cite{poliyev2016pca}.
+	\item Доклад <<Применение формулы Байеса для распознавания слов с использованием нескольких эталонов>> на Всероссийской научно-технической конференции <<Навигация, наведение и управление летательными аппаратами>> (Москва, 2017) \cite{poliyev2017bayes}.
+	\item Доклад <<Разработка алгоритма распознавания слов в условиях шума на основе свёрточных нейронных сетей>> на Девятом Международном Аэрокосмическом Конгрессе IAC'18 (Москва, 2018) \cite{poliyev2018cnn}.
+	\item Доклад <<Распознавание речевых команд на основе свёрточных нейронных сетей>> на Всероссийской научно-технической конференции <<Моделирование авиационных систем>> (Москва, 2018) \cite{poliyev2018cnn2}.
 \end{enumerate}
 
 \textbf{Публикации.}
 По теме диссертации автором опубликовано 4 научных работы \cite{korsun2016automatic,poliyev2017pca,korsun2018usage,korsun2018optimal}: 3 из них в изданиях из списка, рекомендованного ВАК РФ \cite{korsun2016automatic,poliyev2017pca,korsun2018usage}, и 2 из них в изданиях, входящих в базу Scopus и базу Web of Science \cite{korsun2016automatic,korsun2018optimal}.
-\begin{enumerate}[label={\arabic*)}]
-	\item Статья <<Автоматическое выделение фонетически однородных участков в словах естественного языка на основе многопараметрической оптимизации>> в журнале <<Известия Российской академии наук. Теория и системы управления>>, 2016 год, № 4, страницы 145–-154 \cite{korsun2016automatic}.
-	\item Статья <<Разработка алгоритма синтеза оптимальных эталонов на основе метода главных компонент>> в журнале <<Cloud of science>>, 2017 год, № 4, страницы 650--661 \cite{poliyev2017pca}.
-	\item Статья <<Использование нескольких эталонов при распознавании речи: формула Байеса и метод комитетов>> в журнале <<Вестник компьютерных и информационных технологий>>, 2018 год, № 1, страницы 14--23 \cite{korsun2018usage}.
-	\item Статья <<Optimal pattern synthesis for speech recognition based on principal component analysis>> в журнале <<IOP Conference Series: Materials Science and Engineering>>, 2018 год, № 312, страницы 12--14 \cite{korsun2018optimal}.
-\end{enumerate}
+
+% версия для диссертации
+%\textbf{Апробация работы.}
+%Основные результаты исследования докладывались на следующих конференциях:
+%\begin{enumerate}[label={\arabic*)}]
+%	\item Доклад на Всероссийской научно-технической конференции <<XII Научные чтения по авиации посвящённые памяти Н.Е. Жуковского>> (Москва, 17 апреля 2015 года).
+%	Тема доклада: <<Получение оптимального эталона с помощью метода главных компонент>>.
+%	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2015pca}.
+%	\item Доклад на Восьмом Международном Аэрокосмическом Конгрессе IAC'15 (Москва, 28--31 августа 2015 года).
+%	Тема доклада: <<Алгоритм разбиения слов на однородные части в интересах разработки речевого интерфейса бортового оборудования>>.
+%	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2015split}.
+%	\item Доклад на Всероссийской научно-технической конференции <<XIII Научные чтения по авиации посвящённые памяти Н.Е. Жуковского>> (Москва, 14 апреля 2016 года).
+%	Тема доклада: <<Разработка модифицированного алгоритма динамического программирования для разбиения слов на однородные части>>.
+%	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016dynamic}.
+%	\item Доклад на Юбилейной Всероссийской научно-технической конференции <<Авиационные системы в XXI веке>> (Москва, 26 мая 2016 года).
+%	Тема доклада: <<Определение оптимального разбиения слова на однородные участки на основе матрицы корреляционного портрета>>.
+%	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016split, poliyev2017split}.
+%	\item Доклад на Второй Международной научно-практической конференции <<Эрго-2016: Человеческий фактор в сложных технических системах и средах>> (Санкт-Петербург, 6--9 июля 2016 года).
+%	Тема доклада: <<Разработка метода анализа фонетически однородных частей слов естественного языка>>.
+%	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016natural}.
+%	\item Доклад на международном семинаре Workshop on Contemporary Materials and Technologies in the Aviation Industry --- CMTAI (Москва, 15--16 декабря 2016 года).
+%	Тема доклада: <<The algorithm of an optimal word pattern synthesis using principal component analysis>>.
+%	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2016pca}.
+%	\item Доклад на Всероссийской научно-технической конференции <<Навигация, наведение и управление летательными аппаратами>> (Москва, 21--22 сентября 2017 года).
+%	Тема доклада: <<Применение формулы Байеса для распознавания слов с использованием нескольких эталонов>>.
+%	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2017bayes}.
+%	\item Доклад на Девятом Международном Аэрокосмическом Конгрессе IAC'18 (Москва, 28--31 августа 2018 года).
+%	Тема доклада: <<Разработка алгоритма распознавания слов в условиях шума на основе свёрточных нейронных сетей>>.
+%	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2018cnn}.
+%	\item Доклад на Всероссийской научно-технической конференции <<Моделирование авиационных систем>> (Москва, 21--22 ноября 2018 года).
+%	Тема доклада: <<Распознавание речевых команд на основе свёрточных нейронных сетей>>.
+%	Текст доклада напечатан в сборнике докладов конференции \cite{poliyev2018cnn2}.
+%\end{enumerate}
+%
+%\textbf{Публикации.}
+%По теме диссертации автором опубликовано 4 научных работы \cite{korsun2016automatic,poliyev2017pca,korsun2018usage,korsun2018optimal}: 3 из них в изданиях из списка, рекомендованного ВАК РФ \cite{korsun2016automatic,poliyev2017pca,korsun2018usage}, и 2 из них в изданиях, входящих в базу Scopus и базу Web of Science \cite{korsun2016automatic,korsun2018optimal}.
+%\begin{enumerate}[label={\arabic*)}]
+%	\item Статья <<Автоматическое выделение фонетически однородных участков в словах естественного языка на основе многопараметрической оптимизации>> в журнале <<Известия Российской академии наук. Теория и системы управления>>, 2016 год, № 4, страницы 145–-154 \cite{korsun2016automatic}.
+%	\item Статья <<Разработка алгоритма синтеза оптимальных эталонов на основе метода главных компонент>> в журнале <<Cloud of science>>, 2017 год, № 4, страницы 650--661 \cite{poliyev2017pca}.
+%	\item Статья <<Использование нескольких эталонов при распознавании речи: формула Байеса и метод комитетов>> в журнале <<Вестник компьютерных и информационных технологий>>, 2018 год, № 1, страницы 14--23 \cite{korsun2018usage}.
+%	\item Статья <<Optimal pattern synthesis for speech recognition based on principal component analysis>> в журнале <<IOP Conference Series: Materials Science and Engineering>>, 2018 год, № 312, страницы 12--14 \cite{korsun2018optimal}.
+%\end{enumerate}
 
