небольшие исправления в автореферате
небольшие изменения по оформлению и добавлены подписи

--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -19,7 +19,7 @@
 
 %Диссертационная работа была выполнена при поддержке грантов ...
 
-\textbf{Объем и структура работы.} Диссертация состоит из введения, четырёх разделов и заключения. Полный объём диссертации составляет 150 страниц, включая 26 рисунков и 54 таблицы. Список литературы содержит 94 наименования.
+\textbf{Объем и структура работы.} Диссертация состоит из введения, четырёх разделов и заключения. Полный объём диссертации составляет 152 страницы, включая 26 рисунков и 54 таблицы. Список литературы содержит 94 наименования.
 
 \newpage
 \begin{center}
