--- a/common/data.tex
+++ b/common/data.tex
@@ -28,11 +28,11 @@
 \newcommand{\thesisDegree}             % Диссертация, ученая степень
 {кандидата технических наук}
 \newcommand{\thesisDegreeShort}        % Диссертация, ученая степень, краткая запись
-{канд. техн. наук}
+{канд.~техн.~наук}
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
-{2019}
+{2020}
 \newcommand{\thesisOrganization}       % Диссертация, организация
 {Федеральное государственное автономное \\
 образовательное учреждение высшего образования \\
@@ -56,6 +56,10 @@
 {О.\,Н.~Корсун}
 \newcommand{\supervisorRegaliaShort}     % Научный руководитель, регалии
 {д-р~техн.~наук,~проф.}
+\newcommand{\supervisorJobPlace}      	 % Научный руководитель, место работы
+{ФГУП <<Государственный научно-исследовательский институт авиационных систем>>}
+\newcommand{\supervisorJobPost}          % Научный руководитель, должность
+{начальник лаборатории}
 
 %% \newcommand{\supervisorTwoDead}{}        % Рисовать рамку вокруг фамилии
 %% \newcommand{\supervisorTwoFio}           % Второй научный руководитель, ФИО
@@ -68,22 +72,22 @@
 %% {\todo{уч.~ст.,~уч.~зв.}}
 
 \newcommand{\opponentOneFio}           % Оппонент 1, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Никульчев Евгений Витальевич}
 \newcommand{\opponentOneRegalia}       % Оппонент 1, регалии
-{\todo{доктор физико-математических наук, профессор}}
+{доктор технических наук, профессор}
 \newcommand{\opponentOneJobPlace}      % Оппонент 1, место работы
-{\todo{Не очень длинное название для места работы}}
+{ФГБОУ ВО <<МИРЭА --- Российский технологический университет>>}
 \newcommand{\opponentOneJobPost}       % Оппонент 1, должность
-{\todo{старший научный сотрудник}}
+{профессор кафедры управления и моделирования систем}
 
 \newcommand{\opponentTwoFio}           % Оппонент 2, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Чучупал Владимир Яковлевич}
 \newcommand{\opponentTwoRegalia}       % Оппонент 2, регалии
-{\todo{кандидат физико-математических наук}}
+{кандидат физико-математических наук}
 \newcommand{\opponentTwoJobPlace}      % Оппонент 2, место работы
-{\todo{Основное место работы c длинным длинным длинным длинным названием}}
+{ФГУ <<ФИЦ <<Информатика и управление>> РАН>>}
 \newcommand{\opponentTwoJobPost}       % Оппонент 2, должность
-{\todo{старший научный сотрудник}}
+{ведущий научный сотрудник}
 
 %% \newcommand{\opponentThreeFio}         % Оппонент 3, ФИО
 %% {\todo{Фамилия Имя Отчество}}
@@ -95,28 +99,30 @@
 %% {\todo{старший научный сотрудник}}
 
 \newcommand{\leadingOrganizationTitle} % Ведущая организация, дополнительные строки. Удалить, чтобы не отображать в автореферате
-{\todo{Федеральное государственное бюджетное образовательное учреждение высшего профессионального образования с~длинным длинным длинным длинным названием}}
+{ФГБУН Санкт-Петербургский институт информатики и автоматизации РАН}
 
 \newcommand{\defenseDate}              % Защита, дата
-{\todo{DD mmmmmmmm YYYY~г.~в~XX часов}}
+{<<21>> мая 2020 года в 14:00 часов}
 \newcommand{\defenseCouncilNumber}     % Защита, номер диссертационного совета
 {Д\,212.125.12}
 \newcommand{\defenseCouncilTitle}      % Защита, учреждение диссертационного совета
-{Московском авиационном институте (национальном исследовательском университете)}
+{ФГБОУ ВО <<Московский авиационный институт (национальном исследовательском университете)>>}
 \newcommand{\defenseCouncilAddress}    % Защита, адрес учреждение диссертационного совета
 {125993, Москва, A-80, ГСП-3, Волоколамское шоссе, д. 4}
 \newcommand{\defenseCouncilPhone}      % Телефон для справок
 {+7~499~158-43-55}
 
 \newcommand{\defenseSecretaryFio}      % Секретарь диссертационного совета, ФИО
-{Старков Александр Владимирович}
+{Старков А.\,В.}
 \newcommand{\defenseSecretaryRegalia}  % Секретарь диссертационного совета, регалии
-{канд.~техн.~наук}            		   % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
+{кандидат технических наук, доцент}    % Для сокращений есть ГОСТы, например: ГОСТ Р 7.0.12-2011 + http://base.garant.ru/179724/#block_30000
 
 \newcommand{\synopsisLibrary}          % Автореферат, название библиотеки
-{\todo{Название библиотеки}}
+{ФГБОУ ВО <<Московский авиационный институт (национальный исследовательский университет)>>
+по адресу: 125993, Москва, A-80, ГСП-3, Волоколамское шоссе, д. 4,
+а также на сайте института по адресу https://mai.ru/events/defence/index.php?ELEMENT\_ID=110619}
 \newcommand{\synopsisDate}             % Автореферат, дата рассылки
-{\todo{DD mmmmmmmm YYYY года}}
+{<<\uline{\hspace{1.2em}}>> \uline{\hspace{6em}} 2020 года}
 
 % To avoid conflict with beamer class use \providecommand
 \providecommand{\keywords}%            % Ключевые слова для метаданных PDF диссертации и автореферата
